--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple push.js test",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [
     "PushJS",
@@ -16,6 +16,7 @@
     "bower": "^1.7.9"
   },
   "dependencies": {
+    "express": "^4.14.0",
     "push.js": "0.0.10"
   }
 }
