--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple push.js test",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "keywords": [
     "PushJS",
